# anime-scraper

./: README.md  pyproject.toml
src/: scrape.py
